@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Correctly update viewport selected status if mailbox is switched during a delete action (Bug #12230).
 * [mms] SECURITY: Fix XSS vulnerability on smartmobile message page (João Machado &lt;geral@jpaulo.eu&gt;).
 * [jan] Fix empty label for spellcheck button.
 * [mms] Fix signature verification for PGP combined signed &amp; encrypted messages (Bug #12142).
@@ -2951,6 +2952,7 @@
    <date>2013-02-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Correctly update viewport selected status if mailbox is switched during a delete action (Bug #12230).
 * [mms] SECURITY: Fix XSS vulnerability on smartmobile message page (João Machado &lt;geral@jpaulo.eu&gt;).
 * [jan] Fix empty label for spellcheck button.
 * [mms] Fix signature verification for PGP combined signed &amp; encrypted messages (Bug #12142).
