@@ -2,6 +2,8 @@
 v6.0.5-git
 ----------
 
+[mms] Correctly update viewport selected status if mailbox is switched during a
+      delete action (Bug #12230).
 [mms] SECURITY: Fix XSS vulnerability on smartmobile message page (João Machado
       <geral@jpaulo.eu>).
 [jan] Fix empty label for spellcheck button.
